--- a/MenuBasico/style.css
+++ b/MenuBasico/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 *{
     margin: 0;
 }
@@ -46,4 +47,32 @@ nav.menu ul:hover{
     background-color: rgb(77, 77, 77);
     border-radius: 5px;
     text-decoration: underline;
+}
+
+form{
+    width: 70%;
+    margin: 6% auto;
+    padding: 10px 13px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+form fieldset{
+    text-align: center;
+    padding: 5px 10px 18px 10px;
+}
+form legend{
+    text-align: left;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.3em;
+}
+form > fieldset > p{
+    color: white;
+    font-size: 1.30em;
+    font-variant: small-caps;
+    font-family: 'Courier New', Courier, monospace;
+}
+form input{
+    font-family: 'BhuTuka Expanded One', cursive;
+    font-size: .65em;
+    font-weight: bold;
 }
