--- a/MenuBasico/style.css
+++ b/MenuBasico/style.css
@@ -54,10 +54,13 @@ form{
     margin: 6% auto;
     padding: 10px 13px;
     font-family: Arial, Helvetica, sans-serif;
+    
 }
 form fieldset{
     text-align: center;
     padding: 5px 10px 18px 10px;
+    border: 1px solid gray;
+    border-radius: 5px;
 }
 form legend{
     text-align: left;
@@ -76,3 +79,7 @@ form input{
     font-size: .65em;
     font-weight: bold;
 }
+Form input:last-of-type(text){
+    width: 60%;
+}
+
