--- a/Projetos/LaddingPage/css/style.css
+++ b/Projetos/LaddingPage/css/style.css
@@ -12,7 +12,7 @@ header{
 }
 .header{
     width: 100%;
-    height: 70px;
+    height: 65px;
     background-color: #222545;
 }
 .header > img{
@@ -35,8 +35,9 @@ header{
 
 .centro > .form{
     float: right;
-    margin-right: 45px;
-    border: 5px solid gray;
+    margin-right: 120px;
+    border: 5px solid rgba(128, 128, 128, 0.589);
+    background-clip: padding-box ;
     width: 25%;
     height: calc(100% + 30px);
     position: relative;
@@ -83,3 +84,28 @@ form > h2{
     height: 40px;
     border: none;
 }
+
+input[type="submit"]:hover{
+    background-color: #1d2275;
+}
+
+.section-ul{
+    float: left;
+    margin-top: 80px;
+    margin-left: 70px;
+    background-color: #393c7369;
+    width: 45%;
+    height: 300px;
+}
+
+.section-ul > ul{
+    list-style-position: inside;
+    margin-left: 25px;
+    margin-top: 15px;
+    color: white;
+}
+
+.section-ul , li{
+    padding-top: 20px;
+}
+
